@@ -1,6 +1,6 @@
 {
   "name": "leaflet-providers",
-  "version": "1.1.17",
+  "version": "1.4.0",
   "description": "An extension to Leaflet that contains configurations for various free tile providers.",
   "main": "leaflet-providers.js",
   "repository": {
@@ -9,10 +9,11 @@
   },
   "scripts": {
     "test": "npm run lint && npm run testsuite",
-    "testsuite": "phantomjs ./node_modules/mocha-phantomjs-core/mocha-phantomjs-core.js tests/index.html",
+    "testsuite": "mocha-chrome tests/index.html",
     "lint": "eslint --config .eslintrc leaflet-providers.js index.html preview/*.js preview/*.html tests/*",
     "min": "uglifyjs leaflet-providers.js -mc -o leaflet-providers.min.js",
-    "release": "mversion patch -m"
+    "release": "mversion patch -m",
+    "release-minor": "mversion minor -m"
   },
   "license": "BSD-2-Clause",
   "bugs": {
@@ -26,13 +27,12 @@
   ],
   "devDependencies": {
     "chai": "^4.1.2",
-    "eslint": "^3.16.1",
-    "eslint-plugin-html": "^2.0.1",
-    "mocha": "^3.2.0",
-    "mocha-phantomjs-core": "^2.1.1",
-    "mversion": "^1.10.1",
-    "phantomjs-prebuilt": "^2.1.16",
-    "uglify-js": "^2.4.15"
+    "eslint": "^5.4.0",
+    "eslint-plugin-html": "^4.0.5",
+    "mocha": "^5.2.0",
+    "mocha-chrome": "^1.1.0",
+    "mversion": "^1.12.0",
+    "uglify-js": "^2.8.29"
   },
   "autoupdate": {
     "source": "git",
