@@ -22,7 +22,17 @@
       "CH": {
         "url": "//tile.osm.ch/switzerland/{z}/{x}/{y}.png",
         "options": {
-          "maxZoom": 18
+          "maxZoom": 18,
+          "bounds": [
+            [
+              45,
+              5
+            ],
+            [
+              48,
+              11
+            ]
+          ]
         }
       },
       "France": {
@@ -39,7 +49,7 @@
         }
       },
       "BZH": {
-        "url": "https://tile.openstreetmap.bzh/br/{z}/{x}/{y}.png",
+        "url": "//tile.openstreetmap.bzh/br/{z}/{x}/{y}.png",
         "options": {
           "attribution": "{attribution.OpenStreetMap}, Tiles courtesy of <a href=\"http://www.openstreetmap.bzh/\" target=\"_blank\">Breton OpenStreetMap Team</a>",
           "bounds": [
@@ -177,7 +187,7 @@
     }
   },
   "MapBox": {
-    "url": "https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}",
+    "url": "https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}{r}.png?access_token={accessToken}",
     "options": {
       "attribution": "Imagery from <a href=\"http://mapbox.com/about/maps/\">MapBox</a> &mdash; Map data {attribution.OpenStreetMap}",
       "subdomains": "abcd",
@@ -186,7 +196,7 @@
     }
   },
   "Stamen": {
-    "url": "//stamen-tiles-{s}.a.ssl.fastly.net/{variant}/{z}/{x}/{y}.{ext}",
+    "url": "//stamen-tiles-{s}.a.ssl.fastly.net/{variant}/{z}/{x}/{y}{r}.{ext}",
     "options": {
       "attribution": "Map tiles by <a href=\"http://stamen.com\">Stamen Design</a>, <a href=\"http://creativecommons.org/licenses/by/3.0\">CC BY 3.0</a> &mdash; Map data {attribution.OpenStreetMap}",
       "subdomains": "abcd",
@@ -203,6 +213,7 @@
       "TonerLabels": "toner-labels",
       "TonerLite": "toner-lite",
       "Watercolor": {
+        "url": "//stamen-tiles-{s}.a.ssl.fastly.net/{variant}/{z}/{x}/{y}.{ext}",
         "options": {
           "variant": "watercolor",
           "minZoom": 1,
@@ -224,6 +235,7 @@
         }
       },
       "TopOSMRelief": {
+        "url": "//stamen-tiles-{s}.a.ssl.fastly.net/{variant}/{z}/{x}/{y}.{ext}",
         "options": {
           "variant": "toposm-color-relief",
           "ext": "jpg",
@@ -383,6 +395,10 @@
       "normalNightMobile": "normal.night.mobile",
       "normalNightGrey": "normal.night.grey",
       "normalNightGreyMobile": "normal.night.grey.mobile",
+      "normalNightTransit": "normal.night.transit",
+      "normalNightTransitMobile": "normal.night.transit.mobile",
+      "reducedDay": "reduced.day",
+      "reducedNight": "reduced.night",
       "basicMap": {
         "options": {
           "type": "basetile"
@@ -411,6 +427,18 @@
         "options": {
           "base": "aerial",
           "variant": "hybrid.day.mobile"
+        }
+      },
+      "hybridDayTransit": {
+        "options": {
+          "base": "aerial",
+          "variant": "hybrid.day.transit"
+        }
+      },
+      "hybridDayGrey": {
+        "options": {
+          "base": "aerial",
+          "variant": "hybrid.grey.day"
         }
       },
       "pedestrianDay": "pedestrian.day",
@@ -461,7 +489,7 @@
     }
   },
   "CartoDB": {
-    "url": "https://cartodb-basemaps-{s}.global.ssl.fastly.net/{variant}/{z}/{x}/{y}.png",
+    "url": "https://cartodb-basemaps-{s}.global.ssl.fastly.net/{variant}/{z}/{x}/{y}{r}.png",
     "options": {
       "attribution": "{attribution.OpenStreetMap} &copy; <a href=\"http://cartodb.com/attributions\">CartoDB</a>",
       "subdomains": "abcd",
@@ -474,7 +502,11 @@
       "PositronOnlyLabels": "light_only_labels",
       "DarkMatter": "dark_all",
       "DarkMatterNoLabels": "dark_nolabels",
-      "DarkMatterOnlyLabels": "dark_only_labels"
+      "DarkMatterOnlyLabels": "dark_only_labels",
+      "Voyager": "rastertiles/voyager",
+      "VoyagerNoLabels": "rastertiles/voyager_nolabels",
+      "VoyagerOnlyLabels": "rastertiles/voyager_only_labels",
+      "VoyagerLabelsUnder": "rastertiles/voyager_labels_under"
     }
   },
   "HikeBike": {
@@ -680,11 +712,71 @@
     }
   },
   "Wikimedia": {
-    "url": "https://maps.wikimedia.org/osm-intl/{z}/{x}/{y}.png",
+    "url": "https://maps.wikimedia.org/osm-intl/{z}/{x}/{y}{r}.png",
     "options": {
       "attribution": "<a href=\"https://wikimediafoundation.org/wiki/Maps_Terms_of_Use\">Wikimedia</a>",
       "minZoom": 1,
-      "maxZoom": 18
+      "maxZoom": 19
     }
+  },
+  "GeoportailFrance": {
+      "url": "https://wxs.ign.fr/{apikey}/geoportail/wmts?REQUEST=GetTile&SERVICE=WMTS&VERSION=1.0.0&STYLE={style}&TILEMATRIXSET=PM&FORMAT={format}&LAYER={variant}&TILEMATRIX={z}&TILEROW={y}&TILECOL={x}",
+      "options": {
+          "attribution": "<a target=\"_blank\" href=\"https://www.geoportail.gouv.fr/\">Geoportail France</a>",
+          "bounds": [
+              [-75, -180],
+              [81, 180]
+          ],
+          "minZoom": 2,
+          "maxZoom": 18,
+          "apikey": "choisirgeoportail",
+          "format": "image/jpeg",
+          "style": "normal",
+          "variant": "GEOGRAPHICALGRIDSYSTEMS.MAPS.SCAN-EXPRESS.STANDARD"
+      },
+      "variants": {
+          "parcels": {
+              "options": {
+                  "variant": "CADASTRALPARCELS.PARCELS",
+                  "maxZoom": 20,
+                  "style": "bdparcellaire",
+                  "format": "image/png"
+              }
+          },
+          "ignMaps": "GEOGRAPHICALGRIDSYSTEMS.MAPS",
+          "maps": "GEOGRAPHICALGRIDSYSTEMS.MAPS.SCAN-EXPRESS.STANDARD",
+          "orthos": {
+              "options": {
+                  "maxZoom": 19,
+                  "variant": "ORTHOIMAGERY.ORTHOPHOTOS"
+              }
+          }
+      }
+  },
+  "OneMapSG": {
+      "url": "https://maps-{s}.onemap.sg/v3/{variant}/{z}/{x}/{y}.png",
+      "options": {
+          "variant": "Default",
+          "minZoom": 11,
+          "maxZoom": 18,
+          "bounds": [
+              [
+                1.56073,
+                104.11475
+              ],
+              [
+                1.16,
+                103.502
+              ]
+          ],
+          "attribution": "New OneMap | Map data &copy; contributors, <a href=\"http://SLA.gov.sg\">Singapore Land Authority</a>"
+      },
+      "variants": {
+          "Default": "Default",
+          "Night": "Night",
+          "Original": "Original",
+          "Grey": "Grey",
+          "LandLot": "LandLot"
+      }
   }
 }
