@@ -3,6 +3,7 @@ leaflet 2.0.3
 
 BUG FIXES and IMPROVEMENTS
 * Fixed [rstudio/crosstalk#58](https://github.com/rstudio/crosstalk/issues/58), which caused Leaflet maps that used Crosstalk shared data in Shiny apps, to be redrawn at incorrect times.
+* Upgrade leaflet-provider to 1.4.0, enable more map variants such as CartoDB.Voyager (#567)
 
 
 
